--- a/LibraryManagementSystem.Business/LibraryManagementSystem.Business.csproj
+++ b/LibraryManagementSystem.Business/LibraryManagementSystem.Business.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryManagementSystem.DataAccess\LibraryManagementSystem.DataAccess.csproj" />
+    <ProjectReference Include="..\LibraryManagementSystem.Entities\LibraryManagementSystem.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
