--- a/LibraryManagementSystem.Core/LibraryManagementSystem.Core.csproj
+++ b/LibraryManagementSystem.Core/LibraryManagementSystem.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="FluentValidation" Version="6.4.1" />
     <PackageReference Include="PostSharp" Version="6.10.16" />
+    <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
