--- a/LibraryManagementSystem.Core/LibraryManagementSystem.Core.csproj
+++ b/LibraryManagementSystem.Core/LibraryManagementSystem.Core.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="FluentValidation" Version="6.4.1" />
+    <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="PostSharp" Version="6.10.16" />
     <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
   </ItemGroup>
