New UI pages and operations added

--- a/LibraryManagementSystem.MvcWebUI/LibraryManagementSystem.MvcWebUI.csproj
+++ b/LibraryManagementSystem.MvcWebUI/LibraryManagementSystem.MvcWebUI.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\LibraryManagementSystem.Business\LibraryManagementSystem.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Views\User\signup.cshtml" />
+  </ItemGroup>
+
 </Project>
